actualizacion fto default